0.4.0 ---

Nowości:
-

Naprawione błędy:
-

0.3.0 --- 16.02.2020

Nowości:
- panel kadr na platformie!
- panel główny, który pokazuje zadania z najszybszym deadlinem
- usprawnione logowanie
- nowy styl usuwania i dodawania osoby do zadania
- zadanie już automatycznie nie zaznacza Ciebie
- zmiana podziału niektórych osób
- resetowanie hasła
- usuwanie użytkownika
- osobista lista zadań dla każdego

Naprawione błędy:
- linki kierowników pojawiały się innym użytkownikom

0.2.0 --- 06.02.2020

Nowości:
- pinezka na zadaniu, które jest nowe, lub ma nową zawartość
- nowy styl podziału osób przy dodawaniu nowego zadania
- nowy styl dodawania osób
- przystosowanie kolejnych komponentów do obsługi większej ilości zadań

Naprawione błędy:
- źle usuwane osoby przez delperson.php
- lepsza identyfikacja osób

0.1.1 --- 15.01.2020

Nowości:
- niektóre opcje zadania teraz są schowane w przycisku "więcej opcji"
- przypomnienie o zadaniach przychodzi teraz tylko gdy jest jakieś do wykonania
- osoby, które zakończyły zadanie są wypisane w oknie zadania na zielono
- drobna poprawa stylu strony

Naprawione błędy:
- save_server już nie usuwa zadań, które jeszcze istnieją
- save_server czyści także wiadomości z chatu
- zabezpieczenie przed dwoma takimi samymi zadaniami
- dodanie job_index do bazy danych która zlicza ilość zadań