@@ -12,7 +12,7 @@ if(!isset($_SESSION["log"]) || !isset($_SESSION["id"]))
     exit();
 }
 
-if($_SESSION["rola"]!="kier" && $_SESSION["dzial"]!="kadr")
+if($_SESSION["rola"]=="kier" || $_SESSION["rola"]=="admi" || $_SESSION["rola"]=="kadr" || $_SESSION["id"]=="6")
 {
     header("location:index.php");
     exit();
